--- a/src/components/Navbar/CartWidget/cartwidget.css
+++ b/src/components/Navbar/CartWidget/cartwidget.css
@@ -1,6 +1,15 @@
 .iconContainer {
-    color: var(--second-color);
-    width: 40px;
-    height: 40px;
-    cursor: pointer;
+  color: var(--second-color);
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+}
+
+.iconContainer span {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  position: absolute;
+  right: 150px;
+  top: 10px;
 }
